--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,13 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-<div class="input-group">
-    <div class="input-group-prepend">
-      <span class="input-group-text" id="">Login</span>
-    </div>
-    <input type="text" class="form-control" placeholder="Entrez votre pseudo Github">
-    <button type="button" class="btn btn-secondary">Valider</button>
+<form class="form-inline">
+  <div class="form-group mb-2">
+    <label for="login" class="sr-only">Login</label>
+    <input  type="text" readonly class="form-control-plaintext" id="login" value="Login">
   </div>
+  <div class="form-group mx-sm-3 mb-2">
+    <label for="Pseudo" class="sr-only">Password</label>
+    <input #pseudo type="text" class="form-control" id="Pseudo" placeholder="Pseudo">
+  </div>
+  <button type="submit" class="btn btn-primary mb-2" (click)='navigateToDetail(pseudo.value)'>Valider</button>
+</form>
